load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library", "go_test")
load("@bazel_gazelle//:def.bzl", "gazelle")

gazelle(
    name = "gazelle",
    # you project name here!
    prefix = "github.com/paulbhart/prow-test",
)

go_library(
    name = "go_default_library",
    srcs = ["main.go"],
    importpath = "github.com/paulbhart/prow-test",
    visibility = ["//visibility:private"],
)

go_binary(
    name = "prow-test",
    embed = [":go_default_library"],
    visibility = ["//visibility:public"],
)

go_test(
    name = "go_default_test",
    srcs = ["main_test.go"],
    embed = [":go_default_library"],
)
